--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.7.0",
     "@juggle/resize-observer": "^3.4.0",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
@@ -19,6 +22,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
     "next-themes": "^0.4.6",
+    "openai": "^5.8.2",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
