--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-resizable-panels": "^3.0.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
