--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@juggle/resize-observer": "^3.4.0",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/vite": "^4.1.8",
     "@types/leaflet": "^1.9.19",
     "class-variance-authority": "^0.7.1",
