--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.513.0",
+    "motion": "^12.23.2",
     "next-themes": "^0.4.6",
     "openai": "^5.8.2",
     "react": "^19.1.0",
