--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase-admin": "^13.4.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.513.0",
     "motion": "^12.23.2",
