--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.3",
+    "recharts": "^3.1.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
